# Viridian-Leaf

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.css  App.tsx  annotationUtils.test.ts  annotationUtils.ts  conversionUtils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
