[package]
name = "viridian-leaf"
version = "1.0.0"
description = "A free, lightweight PDF viewer and editor"
authors = ["Viridian Intelligence Ltd. UK"]
license = "MIT"
repository = "https://github.com/coffogit/Viridian-Leaf"
edition = "2021"

[lib]
name = "viridian_leaf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
